tests/ui/parser/issues/misplaced-return-type-without-where-issue-126311.rs
fn bar<T>() -> u8 -> u64 {}
//~^ ERROR expected one of `!`, `(`, `+`, `::`, `<`, `where`, or `{`, found `->`

fn main() {}
